--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <h1 class="titulo">Como fazer bolo de chocolate sem farinha</h1>
          <h2 class="sub-titulo">Receita simples e prática para garantir o seu lanche da tarde</h2>
          <p class="info">Por: <span> Redação ● 16/04/2020 ●</span> Tempo de leitura: 2 mins</p>
-         <img clas="foto-bolo" src="./img/receita-sem-farinha.webp" alt="pedaço de bolo "
+         <img class="foto-bolo" src="./img/receita-sem-farinha.webp" alt="pedaço de bolo "
      </section>
      <section class="ingredientes-container"></section>
      <section class="preparo-container"></section>
